--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(HEADERS
     include/i_mediantor.h
+    include/mediantor_heap.h
     include/mediantor_sqrt_decomp.h
 )
 
 set(SOURCES
+    src/mediantor_heap.cpp
     src/mediantor_sqrt_decomp.cpp
 )
 
